[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/EnergyBarVert.png" type="Texture" id=1]
[ext_resource path="res://Sprites/backgroundvert.png" type="Texture" id=2]
[ext_resource path="res://Stations/ChemicalBar.gd" type="Script" id=3]
[ext_resource path="res://DefaultFont.tres" type="DynamicFont" id=4]

[node name="ChemicalBar" type="TextureProgress"]
margin_left = 341.61
margin_top = 53.9185
margin_right = 395.61
margin_bottom = 646.918
rect_scale = Vector2( 0.75, 0.75 )
size_flags_horizontal = 3
size_flags_vertical = 3
step = 0.01
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 1 )
fill_mode = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="RangeValueLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = 82.4633
margin_top = 176.228
margin_right = 231.463
margin_bottom = 290.228
custom_fonts/mono_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 4 )
text = "Test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentValueLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = 91.5073
margin_top = 310.382
margin_right = 250.507
margin_bottom = 418.382
custom_fonts/normal_font = ExtResource( 4 )
text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxRange" type="TextureProgress" parent="."]
margin_left = 81.7859
margin_top = -1.50735
margin_right = 135.786
margin_bottom = 591.493
rect_scale = Vector2( 0.5, 1 )
size_flags_horizontal = 3
size_flags_vertical = 3
value = 75.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 1 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinRange" type="TextureProgress" parent="."]
margin_left = 81.7859
margin_top = -1.50735
margin_right = 135.786
margin_bottom = 591.493
rect_scale = Vector2( 0.5, 1 )
size_flags_horizontal = 3
size_flags_vertical = 3
value = 65.0
texture_progress = ExtResource( 2 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}
